@@ -138,6 +138,9 @@ Release 2.7.3 - UNRELEASED
     HDFS-9865. TestBlockReplacement fails intermittently in trunk
     (Lin Yiqun via iwasakims)
 
+    HDFS-9812. Streamer threads leak if failure happens when closing
+    DFSOutputStream. (Lin Yiqun via aajisaka)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
